--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 
   "dependencies": {
+    "node": "12.16.1"
     "anti-spam": "^0.2.7",
     "array-sort": "^1.0.0",
     "ascii-data-table": "^2.1.1",
